tests/rosetta/transpiler/Clojure/24-game.error
run error: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/rosetta/transpiler/Clojure/24-game.clj:13:1099).
Can only recur from tail position

Full report at:
/tmp/clojure-13543789574681881505.edn
